integrate gruntfile with simple jshint watch

--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -1,3 +1,4 @@
 <a href="/">Home</a> |
 <a href="/about">About</a> |
-<a href="/json">JSON</a>
+<a href="/json">JSON</a> |
+<a href="/js_include_test">JS Include Test</a>
