--- a/views/js_include_test.ejs
+++ b/views/js_include_test.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>About | <%= appName %></title>
+    <title><%= title %> | <%= appName %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src='/javascripts/js_include_test.js'></script>
   </head>
   <body>
     <h1><%= appName %></h1>
     <% include templates/header.ejs %>
     <h2><%= title %></h2>
-    <p>Welcome to <%= title %></p>
   </body>
 </html>
