Add browserify and grunt tasks

--- a/views/js_include_test.ejs
+++ b/views/js_include_test.ejs
@@ -3,7 +3,7 @@
   <head>
     <title><%= title %> | <%= appName %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <script src='/javascripts/js_include_test.js'></script>
+    <script type="text/javascript" src="/javascripts/application.js"></script>
   </head>
   <body>
     <h1><%= appName %></h1>
