--- a/views/browserify_test.ejs
+++ b/views/browserify_test.ejs
@@ -5,18 +5,15 @@
     <link rel='stylesheet' href='stylesheets/base.css' />
     <link rel='stylesheet' href='stylesheets/bootstrap.min.css' />
     <script type="text/javascript" src="/javascripts/base.js"></script>
+    <script type="text/javascript" src="/javascripts/browserify_test.js"></script>
   </head>
   <body>
     <% include templates/header.ejs %>
     <div class='container'>
       <div class='col-md-12 text-center'>
+
         <h1><%= title %></h1>
-        <h3><%= videoData.categoryName %></h3>
-        <ul class='list-unstyled'>
-          <% videoData.categories.forEach(function(d) { %>
-            <li><%= d.categoryName %></li>
-          <% }); %>
-        </ul>
+        <p>Welcome to the <%= title.toLowerCase() %> page.</p>
       </div>
     </div>
   </body>
