- Enhance gruntfile (add clean and jscs; expand/organize copy, watch, jshint) - Organize application/public file structures

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title><%= title %> | <%= appName %></title>
-    <link rel='stylesheet' href='stylesheets/base.css' />
-    <link rel='stylesheet' href='stylesheets/bootstrap.min.css' />
-    <script type="text/javascript" src="/javascripts/base.js"></script>
+    <link rel='stylesheet' href='stylesheets/app.css'/>
+    <link rel='stylesheet' href='stylesheets/vendor/bootstrap.min.css'/>
+    <script type="text/javascript" src="javascripts/app.js"></script>
   </head>
   <body>
     <% include templates/header.ejs %>
