--- a/views/browserify_test.ejs
+++ b/views/browserify_test.ejs
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title><%= title %> | <%= appName %></title>
-    <link rel='stylesheet' href='stylesheets/base.css' />
-    <link rel='stylesheet' href='stylesheets/bootstrap.min.css' />
-    <script type="text/javascript" src="/javascripts/base.js"></script>
-    <script type="text/javascript" src="/javascripts/browserify_test.js"></script>
+    <link rel='stylesheet' href='stylesheets/app.css'/>
+    <link rel='stylesheet' href='stylesheets/vendor/bootstrap.min.css'/>
+    <script type="text/javascript" src="javascripts/app.js"></script>
+    <script type="text/javascript" src="javascripts/views/browserify_test.js"></script>
   </head>
   <body>
     <% include templates/header.ejs %>
