--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title><%= title %> | <%= appName %></title>
     <link rel='stylesheet' href='stylesheets/app.css'/>
-    <link rel='stylesheet' href='stylesheets/vendor/bootstrap.min.css'/>
+    <link rel='stylesheet' href='stylesheets/vendor.min.css'/>
     <script type="text/javascript" src="javascripts/app.js"></script>
   </head>
   <body>
@@ -14,5 +17,6 @@
         <p>Welcome to the <%= title.toLowerCase() %> page.</p>
       </div>
     </div>
+    <% include templates/footer.ejs %>
   </body>
 </html>
