--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -1,17 +1,17 @@
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+<nav class='navbar navbar-default navbar-fixed-top'>
+  <div class='container'>
+    <div class='navbar-header'>
+      <button type='button' class='navbar-toggle collapsed' data-toggle='collapse' data-target='#navbar' aria-expanded='false' aria-controls='navbar'>
+        <span class='icon-bar'></span>
+        <span class='icon-bar'></span>
+        <span class='icon-bar'></span>
       </button>
-      <a class="navbar-brand" href="/"><%= appName %></a>
+      <a class='navbar-brand' href='/'><%= appName %></a>
     </div>
-    <div id="navbar" class="navbar-collapse collapse">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="/about">About</a></li>
-        <li><a href="/browserify_test">Browserify Test</a></li>
+    <div id='navbar' class='navbar-collapse collapse'>
+      <ul class='nav navbar-nav navbar-right'>
+        <li><a href='/about'>About</a></li>
+        <li><a href='/browserify_test'>Browserify Test</a></li>
       </ul>
     </div>
   </div>
