- add favicon - add navbar styling - fix overflow scroll on footer

--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -6,7 +6,10 @@
         <span class='icon-bar'></span>
         <span class='icon-bar'></span>
       </button>
-      <a class='navbar-brand' href='/'><%= appName %></a>
+      <a class='navbar-brand' href='/'>
+        <img id="navbar-brand-icon" src="images/nodejs-icon.svg">
+        <span id='navbar-brand-text'><%= appName %></span>
+      </a>
     </div>
     <div id='navbar' class='navbar-collapse collapse'>
       <ul class='nav navbar-nav navbar-right'>
