--- a/src/views/browserify_test.ejs
+++ b/src/views/browserify_test.ejs
@@ -7,14 +7,19 @@
     <title><%= title %> | <%= appName %></title>
     <link rel='stylesheet' href='stylesheets/app.css'/>
     <link rel='stylesheet' href='stylesheets/vendor.min.css'/>
+    <!-- @if NODE_ENV == 'DEVELOPMENT' -->
+    <script src="//localhost:35729/livereload.js"></script>
+    <!-- @endif -->
     <script type="text/javascript" src="javascripts/app.js"></script>
+    <script type="text/javascript" src="javascripts/views/browserify_test.js"></script>
   </head>
   <body>
     <% include templates/header.ejs %>
     <div class='container'>
       <div class='col-md-12 text-center'>
+
         <h1><%= title %></h1>
-        <p>Welcome to the <%= title.toLowerCase() %> page.</p>
+        <p id='js-p'>Welcome to the <%= title.toLowerCase() %> page.</p>
       </div>
     </div>
     <% include templates/footer.ejs %>
