Add SASS dev and prod Grunt tasks

--- a/src/views/browserify_test.ejs
+++ b/src/views/browserify_test.ejs
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title><%= title %> | <%= appName %></title>
+    <!-- @if NODE_ENV == 'DEVELOPMENT' -->
     <link rel='stylesheet' href='stylesheets/app.css'/>
     <link rel='stylesheet' href='stylesheets/vendor.min.css'/>
-    <!-- @if NODE_ENV == 'DEVELOPMENT' -->
-    <script src="//localhost:35729/livereload.js"></script>
     <script type="text/javascript" src="javascripts/app.js"></script>
     <script type="text/javascript" src="javascripts/views/browserify_test.js"></script>
+    <script src="//localhost:35729/livereload.js"></script>
     <!-- @endif -->
     <!-- @if NODE_ENV == 'PRODUCTION' -->
-    <script type="text/javascript" src="javascripts/app.<%= version %>.min.js"></script>
-    <script type="text/javascript" src="javascripts/views/browserify_test.<%= version %>.min.js"></script>
+    <link rel='stylesheet' href='stylesheets/app.<%= appVersion %>.min.css'/>
+    <link rel='stylesheet' href='stylesheets/vendor.min.css'/>
+    <script async type="text/javascript" src="javascripts/app.<%= appVersion %>.min.js"></script>
+    <script async type="text/javascript" src="javascripts/views/browserify_test.<%= appVersion %>.min.js"></script>
     <!-- @endif -->
   </head>
   <body>
